force-app/main/default/objects/Mentz_Lead_User_Key__c/Mentz_Lead_User_Key__c.object-meta.xml
<CustomObject>
    <label>Mentz Lead User Key</label>
    <nameField>
        <displayFormat>MLUK-{0000}</displayFormat>
        <label>Mentz Lead User Key Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mentz Lead User Key</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>