force-app/main/default/objects/Mentz_Lead_User_Key__c/fields/Lead_Key__c.field-meta.xml
<CustomField>
    <fullName>Lead_Key__c</fullName>
    <label>Lead Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>