force-app/main/default/objects/Mentz_Lead_User_Key__c/fields/Mentz_Key__c.field-meta.xml
<CustomField>
    <fullName>Mentz_Key__c</fullName>
    <description>Mentz key associated with the lead and user key.</description>
    <label>Mentz Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>