force-app/main/default/objects/Mentz_Lead_User_Key__c/fields/User_Key__c.field-meta.xml
<CustomField>
    <fullName>User_Key__c</fullName>
    <label>User Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>